deploy/app.deployment.mini.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboarding-depl
spec:
  selector:
    matchLabels:
      app: dashboarding
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: dashboarding
    spec:
      containers:
        - name: dashboarding
          image: ariman/dashboarding:0.0.1
          ports:
            - containerPort: 8331
---
apiVersion: v1
kind: Service
metadata:
  name: dashboarding-svc
spec:
  type: NodePort
  ports:
    - port: 8331
      targetPort: 8331
  selector:
    app: dashboarding
