deploy/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboarding-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dashboarding.ariman.com
      http:
        paths:
          - path: /dashboarding
            pathType: Prefix
            backend:
              service:
                name: dashboarding-svc
                port:
                  number: 8331
